# SciDownl

./: .gitignore  README.md  flake.nix  pyproject.toml
example/: simple.py
scidownl/: __init__.py  config.py  log.py
scidownl/api/: cli.py  scihub.py
scidownl/config/: global.ini
scidownl/core/: base.py  captcha.py  chooser.py  content.py  crawler.py  downloader.py  extractor.py  information.py  proxyspec.py  source.py  task.py  updater.py
scidownl/db/: entities.py  service.py
test/: test_config.py
test/core/: test_chooser.py  test_crawler.py  test_downloader.py  test_extractor.py  test_source.py  test_task.py  test_updater.py
test/db/: test_entities.py  test_service.py
typings/: bs4.pyi  click.pyi  loguru.pyi  tablib.pyi
typings/sqlalchemy/: __init__.pyi  engine.pyi  orm.pyi
typings/sqlalchemy/ext/: declarative.pyi
